# crafting_interpreters

./: Notes.md  README.md  settings.gradle.kts
clox/: ;  Makefile  Notes.md  chunk.c  chunk.h  clox  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  simple_bytecode_interpreter_example.c  table.c  table.h  value.c  value.h  vm.c  vm.h
clox/.fleet/: run.json
crafting_interpreters_robert_nystrom/: .gitignore  README.md  settings.gradle.kts
crafting_interpreters_robert_nystrom/gradle/wrapper/: gradle-wrapper.properties
crox/: Cargo.toml  README.md
irox/: .gitignore  Cargo.toml  README.md
minigrep/: README.md  output.txt
minigrep/src/: lib.rs  main.rs
practice_c/: a.out  main.c  test
rlox/: 2  ;  Cargo.toml  README.md  recursive-fib.lox
rlox/src/: example.rs  expr.rs  launch_ast_generator.rs  lib.rs  lox_error.rs  main.rs  scanner.rs  token.rs  token_type.rs
rlox/src/lox/: ast.rs  ast_printer.rs  environment.rs  expr.rs  interpreter.rs  lib.rs  lox_error.rs  main.rs  parser.rs  scanner.rs  stmt.rs  token.rs  token_type.rs
rlox/src/lox/frontend/: lox_callable.rs  lox_value.rs  mod.rs  scanner.rs  token.rs  token_type.rs
rlox/src/lox/tree_walker/: ast.rs  builtins.rs  environment.rs  expr.rs  interpreter.rs  lox_function.rs  mod.rs  parser.rs  stmt.rs
rlox/src/lox/user_interface/: mod.rs
rlox/src/tool/: ast_generator.rs  launch_ast_generator.rs
rlox/tests/: integration_test.rs
src/main/java/com/craftinginterpreters/lox/: Lox.java  Scanner.java  Token.java  TokenType.java
src/main/java/org/example/: Lox.java
(+12 files in other folders)
