[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = '1.4.0'
once_cell = "1.19.0"

[lib]
name = "_lox"
path = "src/lox/lib.rs"

[[bin]]
name = "lox"
path = "src/lox/main.rs"

[[bin]]
name = "generate_ast"
path = "src/tool/ast_generator.rs"

